--- a/backend/requirements_old.txt
+++ b/backend/requirements_old.txt
@@ -1,10 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-geoalchemy2==0.14.2
 psycopg2-binary==2.9.9
+geoalchemy2==0.14.2
 pydantic==2.5.0
-python-multipart==0.0.6
 python-dotenv==1.0.0
-pytest==7.4.3
-httpx==0.25.2
+shapely==2.0.2
+numpy<2.0.0
