--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,17 @@
-FROM node:18-alpine
+FROM node:18-alpine AS builder
 
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
+RUN npm run build
 
-EXPOSE 5173
+FROM node:18-alpine AS runner
+WORKDIR /app
+# copiar solo lo necesario para servir los estáticos
+COPY --from=builder /app/dist ./dist
+COPY start.sh /start.sh
+RUN chmod +x /start.sh
 
-CMD ["npm", "run", "dev", "--", "--host"]
+EXPOSE 3000
+CMD ["/start.sh"]
