Fix: Deploy a Railway. Newly created railway services, new Docker files.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,12 @@
-FROM node:18-alpine AS builder
+FROM node:18-alpine
 
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-RUN npm run build
 
-FROM node:18-alpine AS runner
-WORKDIR /app
-# copiar solo lo necesario para servir los estáticos
-COPY --from=builder /app/dist ./dist
-COPY start.sh /start.sh
-RUN chmod +x /start.sh
+EXPOSE 5173
 
-EXPOSE 3000
-CMD ["/start.sh"]
+CMD ["npm", "run", "dev", "--", "--host"]
