--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,66 @@
 version: '3.8'
 
 services:
-  db:
+  postgres:
     image: postgis/postgis:15-3.3
-    container_name: salesmen_tracker_db
+    container_name: salesmen_tracker_postgres
     environment:
-      POSTGRES_DB: salesmen_tracker
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: salesmen_tracker
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - app-network
 
   backend:
-    build: ./backend
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     container_name: salesmen_tracker_backend
-    environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/salesmen_tracker
     ports:
       - "8000:8000"
+    environment:
+      DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/salesmen_tracker"
+      CORS_ORIGINS: "http://localhost:5173,http://localhost:3000"
+      PORT: "8000"
     depends_on:
-      db:
+      postgres:
         condition: service_healthy
     volumes:
       - ./backend:/app
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - app-network
 
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
     container_name: salesmen_tracker_frontend
     ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend/src:/app/src
-      - /app/node_modules
+      - "5173:3000"
     environment:
-      - VITE_API_URL=http://backend:8000
-    command: npm run dev -- --host
+      VITE_API_URL: "http://localhost:8000"
+      NODE_ENV: "development"
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/app
+    command: npm run dev -- --host 0.0.0.0 --port 5173
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
