--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   postgres:
+    # ✅ IMPORTANTE: Usar postgis en lugar de postgres normal
     image: postgis/postgis:15-3.3
     container_name: salesmen_tracker_postgres
     environment:
@@ -9,9 +10,13 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: salesmen_tracker
     ports:
-      - "5432:5432"
+      # 🔌 PUERTO LOCAL (tu máquina): 5433 (no conflictúa con 5432 local)
+      # 🔌 PUERTO CONTENEDOR: 5432 (interno en Docker)
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      # Script de inicialización para habilitar extensión
+      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -43,10 +48,10 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile.frontend
+      dockerfile: Dockerfile.frontend.dev
     container_name: salesmen_tracker_frontend
     ports:
-      - "5173:3000"
+      - "5173:5173"
     environment:
       VITE_API_URL: "http://localhost:8000"
       NODE_ENV: "development"
@@ -54,6 +59,8 @@ services:
       - backend
     volumes:
       - ./frontend:/app
+      # Importante: No montar node_modules para evitar conflictos
+      - /app/node_modules
     command: npm run dev -- --host 0.0.0.0 --port 5173
     networks:
       - app-network
