--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -35,5 +35,5 @@ COPY --from=builder /app/dist ./dist
 EXPOSE 5173
 
 # Iniciar servidor con puerto 5173
-CMD ["serve", "-s", "dist", "-l", "tcp://0.0.0.0:5173"]
-
+# CMD ["serve", "-s", "dist", "-l", "tcp://0.0.0.0:5173"]
+CMD ["serve", "-s", "dist", "-l", "5173"]
