--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -4,10 +4,11 @@ FROM python:3.11-alpine
 WORKDIR /app
 
 # Instalar dependencias del sistema
-RUN apt-get update && apt-get install -y \
+RUN apk add --no-cache \
     postgresql-client \
-    libpq-dev \
+    libpq \
     gcc \
+    musl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copiar requirements
