--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,15 +1,15 @@
 FROM node:18-alpine AS builder
-   WORKDIR /app
-   COPY frontend/package*.json ./
-   RUN npm install --legacy-peer-deps
-   COPY frontend/ .
-   RUN npm run build
+WORKDIR /app
+COPY frontend/package*.json ./
+RUN npm install --legacy-peer-deps
+COPY frontend/ .
+RUN npm run build
 
-   FROM node:18-alpine
-   WORKDIR /app
-   RUN npm install -g serve
-   COPY --from=builder /app/dist ./dist
-   EXPOSE 5173
-   
-   # ✅ CAMBIO AQUÍ:
-   CMD ["serve", "-s", "dist", "-l", "0.0.0.0:5173"]
+FROM node:18-alpine
+WORKDIR /app
+RUN npm install -g serve
+COPY --from=builder /app/dist ./dist
+EXPOSE 5173
+
+# ✅ CORRECTO:
+CMD ["serve", "-s", "dist", "-p", "5173"]
