--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   postgres:
@@ -48,7 +47,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile.frontend.dev
+      dockerfile: Dockerfile.frontend
     container_name: salesmen_tracker_frontend
     ports:
       - "5173:5173"
