--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,27 +1,15 @@
-# FROM python:3.11-slim
 FROM python:3.11-alpine
 
 WORKDIR /app
 
-# Instalar dependencias del sistema
-RUN apk add --no-cache \
-    postgresql-client \
-    libpq \
-    gcc \
-    musl-dev \
-    && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache postgresql-client libpq gcc musl-dev
 
-# Copiar requirements
 COPY backend/requirements.txt .
 
-# Instalar dependencias Python
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar código
 COPY backend/ .
 
-# Puerto
 EXPOSE 8000
 
-# Iniciar FastAPI con puerto dinámico
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
