--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,15 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+COPY frontend/package*.json ./
 
-COPY . .
+RUN npm ci --only=production && \
+    npm install @vercel/analytics @vercel/web-vitals
+
+COPY frontend/ ./
+
+RUN npm run build || true
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
