--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,23 @@
+# ==============================================================================
+# REQUIREMENTS.TXT - Salesmen Tracker Backend
+# ==============================================================================
+
+# FastAPI y servidor
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-geoalchemy2==0.14.2
-psycopg2-binary==2.9.9
-pydantic==2.5.0
 python-multipart==0.0.6
+
+# Base de datos
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+geoalchemy2==0.14.2
+
+# Validación y settings
+pydantic==2.5.2
+pydantic-settings==2.1.0
+
+# Seguridad
+bcrypt==4.1.1
+
+# Utilidades
 python-dotenv==1.0.0
-pytest==7.4.3
-httpx==0.25.2
-bcrypt==4.0.1
